--- a/UNIT 1/Lecture1 - Knapsack.ipynb
+++ b/UNIT 1/Lecture1 - Knapsack.ipynb
@@ -2,6 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "bed27f84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Code for Lecture 1 on Knapsack Problem\n",
+    "\n",
+    "author: @raj-ch017\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "6aa0072b",
    "metadata": {},
